@@ -71,6 +71,9 @@ oses.eachWithIndex { osMapping, indexOfOs ->
                         if (jdk == 7) {
                             allOptions += '-Dhttps.protocols=TLSv1.2'
                         }
+                        if (jdk >= 9) {
+                            allOptions += '\"-Djvm9.args.tests=--add-opens java.base/java.lang=ALL-UNNAMED\"'
+                        }
                         if (!maven.startsWith('3.2') && !maven.startsWith('3.3') && !maven.startsWith('3.5')) {
                             allOptions += '--no-transfer-progress'
                         }
